Wed Jul 10 08:21:15 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems 2.1
	* test/rubygems:  Ditto.

Wed Jul 10 07:34:34 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/ext/ext_conf_builder.rb:  Remove siteconf file after
	  building the gem.
	* test/rubygems/test_gem_ext_ext_conf_builder.rb:  Test for the above.

	* lib/rubygems/psych_tree.rb (module Gem):  Add backward compatibility
	  for r41148

	* test/rubygems/test_gem_package.rb:  Add backward compatibility for
	  double-slash elimination.

Wed Jul 10 06:22:27 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (date_zone_to_diff): [ruby-core:55831].

Wed Jul 10 00:41:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): x*1 is x.

Tue Jul  9 22:24:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul1): No need to invoke MEMZERO at last.
	  (bary_mul_single): Invoke MEMZERO here.

Tue Jul  9 21:40:01 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_text.rb: Add missing tests for Text#<<.
	  Reported by nagachika. Thanks!!!

Tue Jul  9 18:02:38 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#chown_R): Do not skip traversal even
	  if user and group are both nil, to be consistent with #chown and
	  other commands.

Tue Jul  9 17:58:26 2013  Akinori MUSHA  <knu@iDaemons.org>

	* test/fileutils/test_fileutils.rb
	  (TestFileUtils#assert_output_lines): New utility assertion
	  method for testing verbose output.

Tue Jul  9 17:43:57 2013  Koichi Sasada  <ko1@atdot.net>

	* test/test_tracer.rb: catch up recent rubygems changes.

Tue Jul  9 16:58:30 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb: hope that the final
	  resolution to fix the failure of test-all.  and includes Win64
	  support (fixed a potential bug).

Tue Jul  9 15:57:20 2013  Akinori MUSHA  <knu@iDaemons.org>

	* object.c: Fix rdoc for Kernel#<=>. [Fix GH-352]
